--- a/parts/autoproject/subprojectoptionsdlgbase.ui
+++ b/parts/autoproject/subprojectoptionsdlgbase.ui
@@ -109,6 +109,9 @@
                                 <property name="text">
                                     <string>...</string>
                                 </property>
+                                <property name="autoDefault">
+                                    <bool>false</bool>
+                                </property>
                             </widget>
                         </hbox>
                     </widget>
@@ -184,6 +187,9 @@
                                 <property name="text">
                                     <string>...</string>
                                 </property>
+                                <property name="autoDefault">
+                                    <bool>false</bool>
+                                </property>
                             </widget>
                         </hbox>
                     </widget>
@@ -258,6 +264,9 @@
                                 </property>
                                 <property name="text">
                                     <string>...</string>
+                                </property>
+                                <property name="autoDefault">
+                                    <bool>false</bool>
                                 </property>
                             </widget>
                         </hbox>
